added header and listing functionality

--- a/simple-todos/simple-todos.html
+++ b/simple-todos/simple-todos.html
@@ -3,6 +3,15 @@
 </head>
 
 <body>
+  <header>
+  <h1>Todo List</h1>
+
+  <!-- add a form below the h1 -->
+  <form class="new-task">
+    <input type="text" name="text" placeholder="Type to add new tasks" />
+  </form>
+</header>
+
   <div class="container">
     <header>
       <h1>Todo List</h1>
@@ -13,7 +22,7 @@
         {{> task}}
       {{/each}}
     </ul>
-  
+
   </div>
 </body>
 
